[package]
name = "random-wasm"
version = "0.1.0"
edition = "2021"
description = "A random function by rust"
license = "MIT"
repository = "https://github.com/zongzi531/random-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
